--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "livehelperchat/amazons3",
+  "name": "livehelperchat/telegram",
   "version": "1.0",
   "description": "Telegram support for Live Helper Chat",
   "type": "project",
